2010-07-10  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Kodak-ESP_3250.xml:
	  New entries added to the MySQL database.

2010-07-09  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-OfficeJet_4300.xml: printer/Samsung-CLP-300.xml,
	  printer/Samsung-CLP-310.xml, printer/Samsung-CLP-315.xml,
	  printer/Samsung-CLP-610ND.xml, printer/Xerox-Phaser_6110.xml:
	  Restored printer entries which got lost due to a web server bug.

2010-07-06  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/epson-escpr.xml:
	  Entries modified in the MySQL database.

	* db/source/printer/Samsung-CLP-300.xml,
	  db/source/printer/Samsung-CLP-310.xml,
	  db/source/printer/Samsung-CLP-315.xml,
	  db/source/printer/Samsung-CLP-610ND.xml,
	  db/source/printer/Xerox-Phaser_6110.xml:
	  Entries removed from the MySQL database.

2010-07-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented new "fingerprint" parameter for the <package>
	  tag. It provides a link to key fingerprint on the web site of the
	  issuer of the driver.

	* xmlschema/driver.xsd: Updated for new "fingerprint" attribute of the
	  <package> tag.

2010-06-24  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/HP-OfficeJet_4300.xml:
	  Entries removed from the MySQL database.

2010-06-22  Tim Waugh <twaugh@redhat.com>

	* db/source/driver/PostScript.xml: Added reference to HP Color
	  LaserJet 2605dn.

2010-06-19  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/splix.xml:
	  Entries modified in the MySQL database.

2010-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/foo2qpdl.xml: This driver also supports the Samsung CLP-310.

	* driver/splix.xml: SpliX refuses to print on color printers if no
	  color profiles are installed. Added appropriate notice.

	* printer/Epson-BX305_Series.xml: Corrected model name.

	* printer/Epson-ME_620F_Series.xml,