@@ -44,18 +44,19 @@
     Postscript level 2 out of the box, parallel and USB connection,
     1200n with ethernet connection, scan extension available.&lt;p&gt;
 
-    For basic printing functionality use the Postscript PPD. For advanced functionality such
-    as printer status and maintenance features, use the
-    &lt;a href=&quot;http://hplipopensource.com/&quot;&gt;
-    HPLIP driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
+    For basic printing functionality use the Postscript PPD. For
+    advanced functionality such as printer status and maintenance
+    features, use the &lt;a
+    href=&quot;http://hplipopensource.com/&quot;&gt; HPLIP
+    driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
 
-    This printer is a good choice for a cheap laser printer (around
-    400$), especially when you print a lot of text documents, as
-    letters, documentation, manuals, ... for these documents it is
-    really fast, as advertized by HP. But when using it on complicated
-    graphics (web pages rendered by Konqueror, photo
-    &quot;convert&quot;ed to PostScript with ImageMagick) in
-    PostScript mode, it is very slow. If you use it in PCL mode, it is
+    This printer is a good choice for a cheap laser printer,
+    especially when you print a lot of text documents, as letters,
+    documentation, manuals, ... for these documents it is really fast,
+    as advertized by HP. But when using it on complicated graphics
+    (web pages rendered by Konqueror, photo &quot;convert&quot;ed to
+    PostScript with ImageMagick) in PostScript mode, it is very slow
+    and can easily run out of memory. If you use it in PCL mode, it is
     fast in both text and graphics printing. Therefore we recommend to
     use this printer with a Ghostscript driver like
     &quot;pxlmono&quot; or HPLIP.&lt;p&gt;
