@@ -29,7 +29,7 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>hplip</driver>
+  <driver>pxlmono</driver>
   <drivers>
     <driver>
       <id>hplip</id>
@@ -49,11 +49,12 @@
     See a longer user review about the printing capabilities of the
     device in the entry of the HP LaserJet 1200.&lt;p&gt;
 
-    For basic printing functionality use the Postscript PPD. 
-    For advanced functionality such as printer status, maintenance 
-    features, scanning and photo card unload use the &lt;a href=&quot;
-    http://hplipopensource.com/&quot;&gt;HPLIP driver&lt;/a&gt; (which includes 
-    HPIJS). &lt;p&gt;
+    For basic printing functionality use the Postscript PPD or any PCL
+    driver. For advanced functionality such as printer status,
+    maintenance features, scanning and photo card unload use the &lt;a
+    href=&quot; http://hplipopensource.com/&quot;&gt;HPLIP
+    driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
+
     </en>
   </comments>
 </printer>
