@@ -28,7 +28,7 @@
     </general>
   </autodetect>
   <functionality>B</functionality>
-  <driver>hplip</driver>
+  <driver>pxlmono</driver>
   <drivers>
     <driver>
       <id>hplip</id>
@@ -41,8 +41,8 @@
     and USB connection, 250-sheet tray built-in, extra 250-sheet tray
     available.&lt;p&gt;
 
-    Inductive &quot;Instant On&quot; fuser for very fast pre-heating, first page
-    after around 8 seconds.&lt;p&gt;
+    Inductive &quot;Instant On&quot; fuser for very fast pre-heating,
+    first page after around 8 seconds.&lt;p&gt;
 
     For basic printing functionality use the Postscript PPD or one of
     the PCL drivers. For advanced functionality such as printer status
@@ -61,12 +61,16 @@
     capability.  It is the recommended driver for this printer as it
     has the best performance across all workloads.&lt;p&gt;
 
-    Please try also &quot;pxlmono&quot;. Probably it is also faster than
+    Please try also &quot;pxlmono&quot;. It is somewhat faster than
     PostScript when only the default amount of memory is
     available.&lt;p&gt;&lt;p&gt;
 
-      Consumables/Refills: Toner and drum in one print cartridge, cartridges for 2500 or
-	4000 pages available&lt;p&gt;
+    Note that the printer also easily runs out of memory when printing
+    images in 1200x1200 dpi. Reduce the resolution to 600x600 dpi to
+    get faster and more reliable printing.&lt;p&gt;
+
+    Consumables/Refills: Toner and drum in one print cartridge,
+    cartridges for 2500 or 4000 pages available&lt;p&gt;
 
     </en>
   </comments>
