@@ -28,7 +28,7 @@
     </general>
   </autodetect>
   <functionality>B</functionality>
-  <driver>hplip</driver>
+  <driver>pxlmono</driver>
   <drivers>
     <driver>
       <id>hplip</id>
@@ -61,9 +61,13 @@
     capability.  It is the recommended driver for this printer as it
     has the best performance across all workloads.&lt;p&gt;
 
-    Please try also &quot;pxlmono&quot;. Probably it is also faster than
+    Please try also &quot;pxlmono&quot;. It is somewhat faster than
     PostScript when only the default amount of memory is
-    available.&lt;p&gt;
+    available.&lt;p&gt;&lt;p&gt;
+
+    Note that the printer also easily runs out of memory when printing
+    images in 1200x1200 dpi. Reduce the resolution to 600x600 dpi to
+    get faster and more reliable printing.&lt;p&gt;
 
     </en>
   </comments>
