@@ -28,7 +28,7 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>hplip</driver>
+  <driver>pxlmono</driver>
   <drivers>
     <driver>
       <id>hplip</id>
@@ -36,11 +36,17 @@
   </drivers>
   <comments>
     <en>
-    For basic printing functionality use the Postscript PPD. 
-    For advanced functionality such as printer status, maintenance 
-    features, scanning and photo card unload use the &lt;a href=&quot;
-    http://hplipopensource.com/&quot;&gt;HPLIP driver&lt;/a&gt; (which includes 
-    HPIJS). &lt;p&gt;
+
+    For basic printing functionality use the Postscript PPD or any PCL
+    driver.  For advanced functionality such as printer status,
+    maintenance features, scanning and photo card unload use the &lt;a
+    href=&quot; http://hplipopensource.com/&quot;&gt;HPLIP
+    driver&lt;/a&gt; (which includes HPIJS/hpcups).&lt;p&gt;
+
+    Note that the printer does not come with enough memory for
+    printing images in 1200x1200 dpi. If your printer is very slow or
+    runs out of memory, reduce the resolution to 600x600 dpi and also
+    try PCL drivers instead of PostScript.&lt;p&gt;
     
     </en>
   </comments>
