@@ -1,3 +1,12 @@
+2010-07-14  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_1220.xml,
+	  printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_1320.xml,
+	  printer/HP-LaserJet_3390.xml, printer/HP-LaserJet_3392.xml:
+	  Recommend the "pxlmono" driver instead of HPLIP PostScript, these
+	  printers do not have enough memory for high-resolution PostScript
+	  printing.
+
 2010-07-10  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/Kodak-ESP_3250.xml:
